# tendering_service

./: .dockerignore  .env.sample  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/: INFO.md  Makefile
backend/api/: apps.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
backend/backend/: settings.py  urls.py
backend/core/: mixins.py
backend/organizations/: admin.py  apps.py  constants.py  models.py
backend/tenders/: admin.py  apps.py  constants.py  models.py
backend/users/: admin.py  constants.py  models.py
