[tool.poetry]
name = "zadanie-6105"
version = "0.1.0"
description = "Сервис проведения тендеров"
authors = ["Shoxrux Yuldashov <workmail_yuldashov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "5.1"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.8.0"
pylint = "^3.2.7"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

max-complexity = 10
per-file-ignores = { "__init__.py" = "F401" }

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
faker = "^28.0.0"


[tool.flake8]
line-length = 79
extend-ignore = ["E203"]
exclude = [
    ".git/",
    "__pycache__/",
    "**/migrations/",
    "manage.py",
    "settings.py",
    "env/",
    "venv/",
    ".env/",
    ".venv/",
    "tests/",
    ".pytest_cache",
    ".vscode/",
    ".idea/"
]

[tool.flake8.ignore]
W503 = true
F811 = true
R503 = true
R504 = true
R505 = true

[tool.flake8.per-file-ignores]
"*/settings.py" = "E501"

[tool.black]
line-length = 79
include = '\.pyi?$'
extend-exclude = '''
/(
    migrations
  | __pycache__
  | .pytest_cache
  | .vscode
  | .idea
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_local_folder = ["tenders", "users", "organizations", "core", "api"]
